--- a/accounts/templates/accounts/register.html
+++ b/accounts/templates/accounts/register.html
@@ -26,6 +26,14 @@
                     <label for="email">Email:</label>
                     <input type="email" id="email" name="email" required class="form-control">
                 </div>
+                
+
+                <div class="form-group">
+                    <label for="number">Phone:</label>
+                    <input type="number" id="number" name="number" required class="form-control">
+                </div>
+
+      
                 <div class="form-group">
                     <label for="new_username">Username:</label>
                     <input type="text" id="new_username" name="username" required class="form-control">
